--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,9 @@ pandoc: false
 install: echo Installation step
 
 script:
-- R -e 'install.packages("dplyr", repos = "https://cran.uni-muenster.de/", quiet = TRUE)'
+- R -e 'l <- tempfile();dir.create(l);install.packages("dplyr", lib=l, repos = "https://cran.uni-muenster.de/", quiet = TRUE)'
+- R -e 'l <- tempfile();dir.create(l);install.packages("grattan", lib=l, repos = "https://cran.uni-muenster.de/", quiet = TRUE)'
+- R -e 'l <- tempfile();dir.create(l);install.packages("TeXCheckR", lib=l, repos = "https://cran.uni-muenster.de/", quiet = TRUE)'
+- R -e 'l <- tempfile();dir.create(l);install.packages("knitr", lib=l, repos = "https://cran.uni-muenster.de/", quiet = TRUE)'
+- R -e 'l <- tempfile();dir.create(l);install.packages("xlsx", lib=l, repos = "https://cran.uni-muenster.de/", quiet = TRUE)'
 
