Try installing in parts

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,12 +5,12 @@ pandoc: false
 install: echo Installation step
 
 script:
-- R -e 'l <- tempfile();dir.create(l);install.packages("dplyr", lib=l, repos = "https://cran.uni-muenster.de/", quiet = TRUE)'
-- R -e 'l <- tempfile();dir.create(l);install.packages("readr", lib=l, repos = "https://cran.uni-muenster.de/", quiet = TRUE)'
-- R -e 'l <- tempfile();dir.create(l);install.packages("grattan", lib=l, repos = "https://cran.uni-muenster.de/", quiet = TRUE)'
-- R -e 'l <- tempfile();dir.create(l);install.packages("TeXCheckR", lib=l, repos = "https://cran.uni-muenster.de/", quiet = TRUE)'
-- R -e 'l <- tempfile();dir.create(l);install.packages("knitr", lib=l, repos = "https://cran.uni-muenster.de/", quiet = TRUE)'
-- R -e 'l <- tempfile();dir.create(l);install.packages("xlsx", lib=l, repos = "https://cran.uni-muenster.de/", quiet = TRUE)'
-- R -e 'l <- tempfile();dir.create(l);install.packages("RPANDA", lib=l, repos = "https://cran.uni-muenster.de/", quiet = TRUE)'
-- R -e 'l <- tempfile();dir.create(l);install.packages("maGUI", lib=l, repos = "https://cran.uni-muenster.de/", quiet = TRUE)'
+- Rscript -e 'dir.create("AB");install.packages("dplyr", lib="AB", repos = "https://cran.uni-muenster.de/", quiet = TRUE)'
+- Rscript -e 'l <- tempfile();dir.create(l);install.packages("readr", lib=l, repos = "https://cran.uni-muenster.de/", quiet = TRUE)'
+- Rscript -e 'l <- tempfile();dir.create(l);install.packages("grattan", lib=l, repos = "https://cran.uni-muenster.de/", quiet = TRUE)'
+- Rscript -e 'l <- tempfile();dir.create(l);install.packages("TeXCheckR", lib=l, repos = "https://cran.uni-muenster.de/", quiet = TRUE)'
+- Rscript -e 'l <- tempfile();dir.create(l);install.packages("knitr", lib=l, repos = "https://cran.uni-muenster.de/", quiet = TRUE)'
+- Rscript -e 'l <- tempfile();dir.create(l);install.packages("xlsx", lib=l, repos = "https://cran.uni-muenster.de/", quiet = TRUE)'
+- Rscript -e 'install.packages("RPANDA", lib="AB", repos = "https://cran.uni-muenster.de/", quiet = TRUE)'
+- Rscript -e 'l <- tempfile();dir.create(l);install.packages("maGUI", lib=l, repos = "https://cran.uni-muenster.de/", quiet = TRUE)'
 
