--- a/.travis.yml
+++ b/.travis.yml
@@ -5,12 +5,10 @@ pandoc: false
 install: echo Installation step
 
 script:
-#- Rscript -e 'l <- tempfile();install.packages("dplyr", lib="AB", repos = "https://cran.uni-muenster.de/", quiet = TRUE)'
+#- Rscript -e 'l <- tempfile();install.packages("dplyr", lib="AB", repos = "https://cran.rstudio.com/", quiet = TRUE)'
 
-- Rscript -e 'l <- tempfile();dir.create(l);install.packages("gsubfn", lib=l, repos = "https://cran.uni-muenster.de/", quiet = TRUE)'
-- Rscript -e 'l <- tempfile();dir.create(l);install.packages("grattan", lib=l, repos = "https://cran.uni-muenster.de/", quiet = TRUE)'
-- Rscript -e 'l <- tempfile();dir.create(l);install.packages("TeXCheckR", lib=l, repos = "https://cran.uni-muenster.de/", quiet = TRUE)'
-- Rscript -e 'l <- tempfile();dir.create(l);install.packages("knitr", lib=l, repos = "https://cran.uni-muenster.de/", quiet = TRUE)'
-#- Rscript -e 'install.packages("RPANDA", lib="AB", repos = "https://cran.uni-muenster.de/", quiet = FALSE)'
-- Rscript -e 'l <- tempfile();dir.create(l);install.packages("maGUI", lib=l, repos = "https://cran.uni-muenster.de/", quiet = FALSE)'
+- Rscript -e 'l <- tempfile();dir.create(l);install.packages("gsubfn", lib=l, repos = "https://cran.rstudio.com/", quiet = TRUE)'
+- Rscript -e 'l <- tempfile();dir.create(l);install.packages("hutils", repos = "https://cran.rstudio.com/", quiet = TRUE)'
+- Rscript -e 'l <- tempfile();dir.create(l);install.packages("grattan", repos = "https://cran.rstudio.com/", quiet = TRUE)'
+- Rscript -e 'l <- tempfile();dir.create(l);install.packages("TeXCheckR", lib=l, repos = "https://cran.rstudio.com/", quiet = TRUE)'
 
