--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,10 @@ install: echo Installation step
 script:
 #- Rscript -e 'l <- tempfile();install.packages("dplyr", lib="AB", repos = "https://cran.rstudio.com/", quiet = TRUE)'
 
-- Rscript -e 'l <- tempfile();dir.create(l);install.packages("gsubfn", lib=l, repos = "https://cran.rstudio.com/", quiet = TRUE)'
 - Rscript -e 'l <- tempfile();dir.create(l);install.packages("hutils", repos = "https://cran.rstudio.com/", quiet = TRUE)'
 - Rscript -e 'l <- tempfile();dir.create(l);install.packages("grattan", repos = "https://cran.rstudio.com/", quiet = TRUE)'
 - Rscript -e 'l <- tempfile();dir.create(l);install.packages("TeXCheckR", lib=l, repos = "https://cran.rstudio.com/", quiet = TRUE)'
+- Rscript -e 'l <- tempfile();dir.create(l);install.packages("Rcpp", lib=l, repos = "https://cran.rstudio.com/", quiet = TRUE)'
+- Rscript -e 'l <- tempfile();dir.create(l);install.packages("BH", lib=l, repos = "https://cran.rstudio.com/", quiet = TRUE)'
+- Rscript -e 'l <- tempfile();dir.create(l);install.packages("checkmate", lib=l, repos = "https://cran.rstudio.com/", quiet = TRUE)'
 
